[package]
name = "lerr"
version = "0.1.5"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bend-n/lerr"
authors = ["bend-n <bend.n@outlook.com>"]
description = "simple errors for lang-dev"
keywords = ["error", "lang-dev", "diagnostics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comat = "0.1.0"
unicode-width = "0.1.10"
anstream = { version = "0.5.0", default-features = false }
